--- a/package.json
+++ b/package.json
@@ -11,6 +11,10 @@
     "build-storybook": "storybook build"
   },
   "dependencies": {
+    "@emotion/react": "^11.14.0",
+    "@emotion/styled": "^11.14.0",
+    "@mui/material": "^6.4.0",
+    "@mui/x-data-grid": "^7.24.0",
     "next": "14.2.23",
     "react": "^18",
     "react-dom": "^18"
